--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ header {
     width: 100%;
     height: 50px;
     background-color: aquamarine;
+    display: flex;
+    align-items: center;
+}
+header i {
+    width: 1%;
 }
 
 .logo-col {
@@ -27,6 +32,7 @@ main {
     width: calc(100vw - 50px);
     height: calc(100vh - 50px);
     background-color: brown;
+    overflow-y: auto;
 }
 
 .large-sidebar {
@@ -47,7 +53,7 @@ main {
 }
 
 .logo-large, .logo-small {
-    width: 100%;
+    width: 75%;
 }
 
 .logo-large {
