--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 header {
     width: 100%;
     height: 50px;
-    background-color: aquamarine;
+    background-color: rgb(210, 210, 210);
     display: flex;
     align-items: center;
 }
@@ -37,14 +37,17 @@ main {
 
 .large-sidebar {
     width: 150px;
-    background-color: blanchedalmond;
     display: none;
     height: calc(100vh - 50px);
 }
 
+.large-sidebar, .small-sidebar {
+    background-color: rgb(3, 3, 66);
+    color: white;
+}
+
 .small-sidebar {
     width: 50px;
-    background-color: blueviolet;
     height: calc(100vh - 50px);
 }
 
