--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,8 @@ main {
 }
 
 .tabel-icon {
-    border: 2px solid gray;
+    border: 1.5px solid gray;
+    color: gray;
 }
 .topbar-icon {
     border: 1px solid white;
@@ -87,6 +88,11 @@ main {
     border-radius: 10px;
     padding: 2px 6px;
     font-size: x-small;
+    transition: all 0.25s;
+}
+
+.blue-bg:hover {
+    scale: 1.1;
 }
 
 .offcanvas-body input {
@@ -99,10 +105,9 @@ main {
 }
 
 .offcanvas-body button {
-    padding: 3px 5px;
+    padding: 1px 2px;
+    font-size: small;
 }
-
-
 
 #FieldsetCheck {
     height: 16px;
@@ -114,11 +119,11 @@ main {
 }
 .searchbar {
     border: none;
-    background-color: lightgray;
+    background-color: #e5e5e5;
     padding-left: 10px;
 }
 
-.s {
+.s, .user-info {
     font-size: small;
 }
 
@@ -146,10 +151,6 @@ th {
     font-weight: normal;
 }
 
-.my-card-header {
-    background-color: gray;
-}
-
 th, td {
     font-size: small;
 }
@@ -168,6 +169,28 @@ th, td {
 
 .red-bg {
     background-color: #DC3545;
+}
+
+.sidebar-select {
+    padding: 3px 6px;
+    transition: all 0.25s;
+}
+
+.sidebar-select:hover {
+    background-color: rgba(255, 255, 255, 0.584);
+    scale: 1.3;
+}
+
+#offcanvasWithBothOptions {
+    width: 100%;
+}
+
+.scale-hover {
+    transition: all 0.25s;
+}
+
+.scale-hover:hover {
+    scale: 1.3;
 }
 
 @media screen and (min-width: 576px) {
@@ -200,5 +223,17 @@ th, td {
     } 
     .content-header-col {
         width: calc(100% - 150px);
+    }
+    #offcanvasWithBothOptions {
+        width: 50%;
+    }
+    tr:hover {
+        background-color: #5555557f;
+    }
+    tr {
+        transition: all 0.25s;
+    }
+    .pointer {
+        cursor: pointer;
     }
 }
