--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,8 @@ main {
     width: 150px;
     display: none;
     height: calc(100vh - 50px);
+    background-image: url(../img/sidebar-bg.png);
+    background-size: cover;
 }
 
 .large-sidebar, .small-sidebar {
